name:                tree-sitter-go
version:             0.1.0
synopsis:            tree-sitter go language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/tree-sitter-go#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     TreeSitter.Go
  build-depends:       base >= 4.7 && < 5
                     , haskell-tree-sitter
                     , template-haskell
                     , tree-sitter-go-internal
  default-language:    Haskell2010

library tree-sitter-go-internal
  exposed-modules:     TreeSitter.Go.Internal
  hs-source-dirs:      internal
  build-depends:       base >= 4.7 && < 5
                     , haskell-tree-sitter
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-go/src
  c-sources:           vendor/tree-sitter-go/src/parser.c

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-go
