name:                tree-sitter-haskell
version:             0.1.0
synopsis:            tree-sitter haskell language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/tree-sitter-haskell#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tree-sitter-haskell
                     , haskell-tree-sitter
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable demo
  main-is: Demo.hs
  hs-source-dirs:
      examples
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskell-tree-sitter
    , tree-sitter-haskell
  default-language: Haskell2010

executable demo-edit
  main-is: DemoEdit.hs
  hs-source-dirs:
      examples
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskell-tree-sitter
    , tree-sitter-haskell
    , containers
    , rosezipper
  default-language: Haskell2010

executable demo-read-tree
  main-is: DemoReadTreeWithCursor.hs
  hs-source-dirs:
      examples
  build-depends:
      base >=4.7 && <5
    , haskell-tree-sitter
    , tree-sitter-haskell
    , containers
    , rosezipper
  default-language: Haskell2010

library
  exposed-modules:     TreeSitter.Haskell
  build-depends:       base >= 4.7 && < 5
                     , haskell-tree-sitter
  default-language:    Haskell2010
  c-sources:           vendor/tree-sitter-haskell/src/parser.c
                     , vendor/tree-sitter-haskell/src/scanner.cc
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-haskell
