name:                tree-sitter-haskell
version:             0.2.0
synopsis:            tree-sitter haskell language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/tree-sitter-haskell#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     TreeSitter.Haskell
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3.0.2 && < 1.4
                     , filepath >= 1.4.1.2 && < 1.5
                     , split >= 0.2.3.2 && < 0.3
                     , template-haskell >= 2.12.0.0 && < 2.14.0.0
                     , tree-sitter-common
  default-language:    Haskell2010
  include-dirs:        vendor/tree-sitter-haskell/src
  c-sources:           vendor/tree-sitter-haskell/src/parser.c
                     , vendor/tree-sitter-haskell/src/scanner.cc
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-haskell
