name:                tree-sitter-java
version:             0.1.0
synopsis:            tree-sitter java language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/tree-sitter-java#readme
author:              Ayman Nadeem, Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     TreeSitter.Java
  build-depends:       base >= 4.7 && < 5
                     , tree-sitter
                     , template-haskell
                     , tree-sitter-java-internal
  default-language:    Haskell2010

library tree-sitter-java-internal
  exposed-modules:     TreeSitter.Java.Internal
  hs-source-dirs:      internal
  build-depends:       base >= 4.7 && < 5
                     , tree-sitter
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-java/src
  c-sources:           vendor/tree-sitter-java/src/parser.c
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-java
