name:                tree-sitter-json
version:             0.1.0
synopsis:            tree-sitter json language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/tree-sitter-json#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          vera@github.com
copyright:           2017 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     TreeSitter.JSON
  build-depends:       base >= 4.7 && < 5
                     , haskell-tree-sitter
                     , template-haskell
                     , tree-sitter-json-internal
  default-language:    Haskell2010
  ghc-options:         -Weverything -Wno-missing-local-signatures -Wno-missing-import-lists -Wno-implicit-prelude -Wno-safe -Wno-unsafe -Wno-name-shadowing -Wno-monomorphism-restriction -Wno-missed-specialisations -Wno-all-missed-specialisations
  if (impl(ghc >= 8.6))
    ghc-options:       -Wno-star-is-type

library tree-sitter-json-internal
  exposed-modules:     TreeSitter.JSON.Internal
  hs-source-dirs:      internal
  build-depends:       base >= 4.7 && < 5
                     , haskell-tree-sitter
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-json/src
  c-sources:           vendor/tree-sitter-json/src/parser.c

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-json
