cabal-version:       2.2
name:                tree-sitter-php
version:             0.1.0.0
synopsis:            tree-sitter php language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/tree-sitter-php#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          vera@github.com
copyright:           2017 GitHub
category:            Web
build-type:          Simple

library
  exposed-modules:     TreeSitter.PHP
  build-depends:       base                 >= 4.12 && < 5
                     , haskell-tree-sitter ^>= 0.1.0.0
                     , template-haskell     >= 2.12.0.0 && < 2.15.0.0
                     , tree-sitter-php-internal
  default-language:    Haskell2010

library tree-sitter-php-internal
  exposed-modules:     TreeSitter.PHP.Internal
  hs-source-dirs:      internal
  build-depends:       base                 >= 4.12 && < 5
                     , haskell-tree-sitter ^>= 0.1.0.0
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-php/src
  c-sources:           vendor/tree-sitter-php/src/parser.c
                     , vendor/tree-sitter-php/src/scanner.cc
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-php
