name:                tree-sitter-python
version:             0.1.0
synopsis:            tree-sitter python language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/tree-sitter-python#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     TreeSitter.Python
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , haskell-tree-sitter
                     , template-haskell
                     , directory >= 1.3.0.2 && < 1.4
                     , filepath >= 1.4.1.2 && < 1.5
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-python/src
  c-sources:           vendor/tree-sitter-python/src/parser.c
                     , vendor/tree-sitter-python/src/scanner.cc
  extra-libraries:     stdc++
  ghc-options:         -Weverything -Wno-missing-local-signatures -Wno-missing-import-lists -Wno-implicit-prelude -Wno-safe -Wno-unsafe -Wno-name-shadowing -Wno-monomorphism-restriction -Wno-missed-specialisations -Wno-all-missed-specialisations -Wno-missing-export-lists
  if (impl(ghc >= 8.6))
    ghc-options:       -Wno-star-is-type

executable python
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , bytestring
                     , haskell-tree-sitter
                     , tree-sitter-python
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-python
