name:                tree-sitter-python
version:             0.1.0
synopsis:            tree-sitter python language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/tree-sitter-python#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     TreeSitter.Python
  build-depends:       base >= 4.7 && < 5
                     , directory >= 1.3.0.2 && < 1.4
                     , filepath >= 1.4.1.2 && < 1.5
                     , template-haskell >= 2.12.0.0 && < 2.15.0.0
                     , aeson
                     , haskell-tree-sitter
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-python/src
  c-sources:           vendor/tree-sitter-python/src/parser.c
                     , vendor/tree-sitter-python/src/scanner.cc
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-python
