name:                tree-sitter-ruby
version:             0.1.0
synopsis:            tree-sitter ruby language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/tree-sitter-ruby#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     TreeSitter.Ruby
  build-depends:       base >= 4.7 && < 5
                     , haskell-tree-sitter
                     , template-haskell
                     , tree-sitter-ruby-internal
  default-language:    Haskell2010

library tree-sitter-ruby-internal
  exposed-modules:     TreeSitter.Ruby.Internal
  hs-source-dirs:      internal
  build-depends:       base >= 4.7 && < 5
                     , haskell-tree-sitter
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-ruby/src
  c-sources:           vendor/tree-sitter-ruby/src/parser.c
                     , vendor/tree-sitter-ruby/src/scanner.cc
  extra-libraries:     stdc++

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-ruby
