name:                tree-sitter-tsx
version:             0.1.0.0
synopsis:            tree-sitter TSX language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/tree-sitter-typescript#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey, Ayman Nadeem, Patrick Thomson
maintainer:          vera@github.com
copyright:           2017 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     TreeSitter.TSX
  build-depends:       base >= 4.7 && < 5
                     , haskell-tree-sitter
                     , template-haskell
                     , tree-sitter-tsx-internal
  default-language:    Haskell2010

library tree-sitter-tsx-internal
  exposed-modules:     TreeSitter.TSX.Internal
  hs-source-dirs:      internal
  build-depends:       base >= 4.7 && < 5
                     , haskell-tree-sitter
  default-language:    Haskell2010
  Include-dirs:        vendor/tree-sitter-typescript/tsx/src
  c-sources:           vendor/tree-sitter-typescript/tsx/src/parser.c
                     , vendor/tree-sitter-typescript/tsx/src/scanner.c

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-typescript
